# r_data_core

./: .cursor-context.md  .dockerignore  .env.example  .env.test  .gitignore  .release-please-manifest.json  API_STANDARDS.md  BUSINESS_LICENSE_AGREEMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  REFACTORING_STRATEGY.md  SECURITY.md  SERVICE_CRATE_STRATEGY.md  TEST_PLAN.md  audit.toml  clippy.toml  compose.yaml  coverage-fe.json  coverage.json  release-please-config.json
crates/api/: Cargo.toml
crates/api/src/: api_state.rs  api_state_impl.rs  health.rs  jwt.rs  lib.rs  models.rs  query.rs  response.rs  token_service.rs
crates/api/src/admin/: mod.rs  query_helpers.rs
crates/api/src/auth/: api_key_info.rs  auth_enum.rs  mod.rs  permission_check.rs  permission_required.rs  utils.rs
crates/api/src/docs/: mod.rs
crates/api/src/middleware/: api_auth.rs  base_auth.rs  combined_auth.rs  error_handler.rs  error_handlers.rs  jwt_auth.rs  mod.rs
crates/api/src/public/: mod.rs
crates/api/src/query/: mod.rs  tests.rs  tests_pagination.rs  tests_sort_filter.rs
crates/api/src/response/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: admin_jwt.rs  admin_user.rs  crypto.rs  email_template.rs  entity_jwt.rs  error.rs  lib.rs  outbox.rs  password_reset_token.rs  prelude.rs  refresh_token.rs  system_log.rs  utils.rs
crates/core/src/admin_user/: model.rs  model_tests.rs
crates/core/src/cache/: backend.rs  in_memory.rs  manager.rs  mod.rs  redis.rs
crates/core/src/config/: api.rs  app.rs  cache.rs  database.rs  license.rs  loader.rs  loader_tests.rs  log.rs  mail.rs  mod.rs  queue.rs  workflow.rs
crates/core/src/domain/: abstract_entity.rs  mod.rs
crates/core/src/entity/: mod.rs  permission_scheme.rs  version.rs
crates/core/src/entity_definition/: definition.rs  definition_tests.rs  mod.rs  repository_trait.rs  schema.rs
crates/core/src/field/: mod.rs  options.rs  types.rs  ui.rs
crates/core/src/maintenance/: mod.rs  task.rs
crates/core/src/permissions/: mod.rs  permission_scheme.rs  role.rs
crates/core/src/public_api/: mod.rs  models.rs
crates/core/src/refresh_token/: model.rs
crates/core/src/settings/: entity_versioning.rs  keys.rs  mod.rs  outbox.rs  workflow_run_logs.rs
crates/core/src/validation/: constraints.rs  mod.rs  patterns.rs
crates/core/src/versioning/: mod.rs  purger_trait.rs
crates/license/: Cargo.toml
crates/license/src/: api.rs  jwt.rs  lib.rs  models.rs  tool_service.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: admin_user_repository.rs  admin_user_repository_trait.rs  api_key_repository.rs  component_version_repository.rs  dashboard_stats_repository.rs  dashboard_stats_repository_trait.rs  dynamic_entity_mapper.rs  dynamic_entity_query_repository.rs  dynamic_entity_query_repository_trait.rs  dynamic_entity_repository.rs  dynamic_entity_repository_trait.rs  dynamic_entity_utils.rs  dynamic_entity_versioning.rs  email_template_repository.rs  email_template_repository_trait.rs  entity_definition_repository.rs  entity_definition_versioning_repository.rs  entity_definition_versioning_repository_trait.rs  lib.rs  migration_service.rs  outbox_repository.rs  outbox_repository_trait.rs  password_reset_repository.rs  password_reset_repository_trait.rs  permission_scheme_repository.rs  permission_scheme_repository_trait.rs  refresh_token_repository.rs  refresh_token_repository_trait.rs  repository.rs  role_repository.rs  role_repository_trait.rs  settings_repository.rs  settings_repository_trait.rs  statistics_repository.rs  statistics_repository_trait.rs  system_log_repository.rs  system_log_repository_trait.rs  version_repository.rs  version_repository_trait.rs  workflow_repository.rs  (+4 more)
crates/persistence/src/dynamic_entity_public_repository/: browse.rs  mod.rs  utils.rs
crates/persistence/src/dynamic_entity_repository/: create.rs  filter.rs  identifier.rs  mod.rs  query.rs  update.rs
crates/persistence/src/outbox_repository/: claim.rs  insert.rs  maintenance.rs  mod.rs  transitions.rs  types.rs
crates/persistence/src/workflow_repository/: crud.rs  mod.rs  raw_items.rs  runs.rs
crates/services/: Cargo.toml
crates/services/src/: admin_user.rs  api_key.rs  auth.rs  bootstrap.rs  cache.rs  dashboard_stats.rs  lib.rs  mail.rs  password_reset.rs  permission_scheme.rs  query_validation.rs  role.rs  settings.rs  system_log.rs  version.rs  worker.rs
crates/services/src/adapters/: api_key_adapter.rs  api_key_adapter.rs.bak  main_adapters.rs  mod.rs
crates/services/src/api_key/: mod.rs  tests.rs
crates/services/src/dynamic_entity/: crud.rs  filtering.rs  mod.rs  tests.rs  validation.rs
crates/services/src/entity_definition/: cache.rs  crud.rs  fields.rs  mod.rs  schema.rs  tests.rs  validation.rs
crates/services/src/license/: mod.rs  service.rs
crates/services/src/statistics/: mod.rs  service.rs
crates/services/src/workflow/: adapter.rs  entity_persistence.rs  item_processing.rs  mod.rs  outbox.rs  output_handling.rs  post_run.rs  service.rs  transform_execution.rs  value_formatting.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: consumer_loop.rs  database.rs  entities.rs  lib.rs  queue.rs
crates/worker/: Cargo.toml
crates/worker/src/: context.rs  lib.rs  main.rs
crates/worker/src/registrars/: license.rs  mod.rs  outbox_purger.rs  password_reset_cleanup.rs  refresh_token.rs  statistics.rs  system_logs_purger.rs  trait_.rs  version_purger.rs  workflow_run_logs_purger.rs
crates/worker/src/runtime/: consumer.rs  mod.rs  outbox.rs  scheduler.rs
crates/worker/src/tasks/: license_verification.rs  mod.rs  outbox_purger.rs  password_reset_cleanup.rs  refresh_token_cleanup.rs  statistics_collection.rs  system_logs_purger.rs  version_purger.rs  workflow_run_logs_purger.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
crates/workflow/src/data/: jobs.rs  mod.rs  requests.rs
crates/workflow/src/dsl/: csv.rs  execution.rs  from.rs  mod.rs  on_complete.rs  path_resolution.rs  processor.rs  program.rs  program_tests.rs  to.rs  (+2 more)
(+1621 files in other folders)
