[package]
name = "r_data_core"
version = "0.1.0"
edition = "2021"
description = "A Digital Asset Management backend providing efficient data handling and distribution"
authors = ["Bent Brüggemann <mail@bent-brueggemann.de>"]
license = "MIT"

# Force single-threaded test execution
[lib]
name = "r_data_core"
path = "src/lib.rs"
doctest = false  # Disable doc tests as they can run in parallel

[[bin]]
name = "r_data_core"
path = "src/main.rs"

[[bin]]
name = "run_migrations"
path = "src/bin/run_migrations.rs"

[[bin]]
name = "apply_schema"
path = "src/bin/apply_schema.rs"

# Use serial_test crate effectively
[dev-dependencies]
mockall = "0.12"
actix-http = "3.4"
actix-service = "2.0"
httpmock = "0.6"
serial_test = { version = "2.0", features = ["async"] }
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
lazy_static = "1.4"

# The rest of the dependencies
[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
actix-rt = "2.9"
actix-multipart = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
tokio = { version = "1.35", features = ["full"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
sha2 = "0.10.8"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
futures = "0.3"
async-trait = "0.1"

# Check for futures-util and add it if missing
futures-util = "0.3"

# Unique IDs
uuid = { version = "1.6", features = ["v7", "serde"] }
rand = "0.9.0"

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dotenv = "0.15"

# Jobs & scheduling
apalis = { version = "0.7.3", default-features = false, features = ["retry"] }
apalis-redis = "0.7.3"
tokio-cron-scheduler = "0.15.1"
cron = "0.12"

# CSV/bytes and general error handling
csv = "1.3"
bytes = "1.6"
anyhow = "1.0"

# API documentation
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web", "debug-embed"] }

# Caching
lru = "0.12"
redis = { version = "0.25.4", features = ["tokio-comp", "connection-manager"] }

# Text processing
regex = "1.10.2"
validator = { version = "0.20.0", features = ["derive"] }

# Command-line argument parsing
clap = "3.2"

# Standards
base64 = "0.22.1"
hex = "0.4"
chrono = "0.4.42"
