[package]
name = "r_data_core"
version = "0.1.22"
edition = "2021"
description = "A Digital Asset Management backend providing efficient data handling and distribution"
authors = ["Bent Brüggemann <mail@bent-brueggemann.de>"]
license = "MIT"

# Force single-threaded test execution
[lib]
name = "r_data_core"
path = "src/lib.rs"
doctest = false  # Disable doc tests as they can run in parallel

[[bin]]
name = "r_data_core"
path = "src/main.rs"

# Use serial_test crate effectively
[dev-dependencies]
mockall = "0.12"
actix-http = "3.4"
httpmock = "0.8.2"
serial_test = { version = "2.0", features = ["async"] }
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
lazy_static = "1.4"
r_data_core_worker = { path = "crates/worker" }

# The rest of the dependencies
[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
r_data_core_api = { path = "crates/api" }
r_data_core_core = { path = "crates/core" }
r_data_core_persistence = { path = "crates/persistence" }
r_data_core_services = { path = "crates/services" }
r_data_core_workflow = { path = "crates/workflow" }
r_data_core_test_support = { path = "crates/test-support"}

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
tokio = { version = "1.35", features = ["full"] }

# Authentication
jsonwebtoken = "9.2"
sha2 = "0.10.8"

# Serialization/Deserialization
serde_json = "1.0"

# Async
futures = "0.3"
async-trait = "0.1"

# Unique IDs
uuid = { version = "1.6", features = ["v7", "serde"] }

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dotenvy = "0.15"

# CSV/bytes and general error handling
bytes = "1.6"
anyhow = "1.0"

# Caching
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

[workspace]
members = [
  "crates/core",
  "crates/persistence",
  "crates/services",
  "crates/api",
  "crates/workflow",
  "crates/worker",
  "crates/test-support",
]
resolver = "2"
