[package]
name = "r_data_core_core"
version = "0.3.10"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.6", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "time"] }
argon2 = "0.5"
rand = "0.9.0"
lru = "0.12"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.0", features = ["sync", "rt", "rt-multi-thread", "macros"] }
chrono = "0.4"
cron = "0.12"
utoipa = { version = "5.4.0", features = ["actix_extras", "time", "uuid"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
regex = "1.10"
