[package]
name = "r_data_core_license"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "license_tool"
path = "src/bin/license_tool.rs"

