[package]
name = "r_data_core_license"
version = "0.4.2"
edition = "2021"
description = "License crate of - A Master Data Managebent backend providing efficient data handling and distribution with custom entities and workflows"
authors = ["Bent Brüggemann <mail@bent-brueggemann.de>"]
license = "Business"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
atty = "0.2"
r_data_core_core = { path = "../core" }

[[bin]]
name = "license_tool"
path = "src/bin/license_tool.rs"
