[package]
name = "r_data_core_persistence"
version = "0.1.3"
edition = "2021"
license = "MIT"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
r_data_core_core = { path = "../core" }
r_data_core_workflow = { path = "../workflow" }
anyhow = "1.0"
argon2 = "0.5"


