[package]
name = "r_data_core_persistence"
version = "0.3.12"
edition = "2021"
description = "Persistence (database) crate of - A Master Data Managebent backend providing efficient data handling and distribution with custom entities and workflows"
authors = ["Bent Brüggemann <mail@bent-brueggemann.de>"]
license = "Business"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time", "migrate"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
async-trait = "0.1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
r_data_core_core = { path = "../core" }
r_data_core_workflow = { path = "../workflow" }
argon2 = "0.5"
dotenvy = "0.15"


