[package]
name = "r_data_core_test_support"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
serde = { version = "1.0", features = ["derive"] }
r_data_core_core = { path = "../core" }
r_data_core_persistence = { path = "../persistence" }


