[package]
name = "r_data_core_test_support"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
dotenvy = "0.15"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time", "migrate"] }
time = "0.3"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.10", features = ["v7"] }
r_data_core_core = { path = "../core" }
r_data_core_persistence = { path = "../persistence" }
r_data_core_services = { path = "../services" }
r_data_core_workflow = { path = "../workflow" }


