[package]
name = "r_data_core_test_support"
version = "0.3.11"
edition = "2021"
description = "Test Support crate of - A Master Data Managebent backend providing efficient data handling and distribution with custom entities and workflows"
authors = ["Bent Brüggemann <mail@bent-brueggemann.de>"]
license = "Business"

[dependencies]
dotenvy = "0.15"
log = "0.4"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time", "migrate"] }
time = "0.3"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.10", features = ["v7"] }
r_data_core_core = { path = "../core" }
r_data_core_persistence = { path = "../persistence" }
r_data_core_services = { path = "../services" }
r_data_core_workflow = { path = "../workflow" }


