[package]
name = "r_data_core_worker"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
r_data_core_core = { path = "../core" }
r_data_core_persistence = { path = "../persistence" }
# Temporary dependency on root crate until services/repositories are fully refactored
r_data_core = { path = "../.." }


