[package]
name = "r_data_core_worker"
version = "0.3.9"
edition = "2021"
license = "MIT"

[[bin]]
name = "r_data_core_worker"
path = "src/main.rs"

[[bin]]
name = "r_data_core_maintenance"
path = "src/bin/maintenance.rs"

[[bin]]
name = "send_statistics"
path = "src/bin/send_statistics.rs"

[dependencies]
dotenvy = "0.15"
log = "0.4"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
futures = "0.3"
tokio-cron-scheduler = "0.9"
uuid = { version = "1.0", features = ["v7"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.9.0"
base64 = "0.22"
chrono = "0.4"
r_data_core_core = { path = "../core" }
r_data_core_persistence = { path = "../persistence" }
r_data_core_services = { path = "../services" }
r_data_core_workflow = { path = "../workflow" }


