[package]
name = "r_data_core_workflow"
version = "0.3.9"
edition = "2021"
description = "Workflow processing and DSL for RData Core"

[dependencies]
r_data_core_core = { path = "../core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
regex = "1.10"
utoipa = { version = "5.4.0", features = ["time", "uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
bytes = "1.6"
futures = "0.3"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
actix-web = "4.5"
csv = "1.3"
